# pythoolbase

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
pytoolbase/: __init__.py  configuration_file.py  credentials_manager.py  cypher.py  database_connection.py  elaborations.py  file_manipulation.py  mail_management.py  my_logger.py  path_manipulation.py  rfid.py  webhooks.py
src/: __init__.py  configuration_file.py  cypher.py  database_connection.py  file_manipulation.py  mail_management.py  path_manipulation.py  webhooks.py
src/external_files/: test.xlsx
src/pytoolbase/: __init__.py  _optional.py  configuration_file.py  database_connections.py  file_manipulations.py  my_logger.py  path_manipulations.py  webhooks.py
tests/: conftest.py  test_configuration_file.py  test_database_connections.py  test_file_manipulations.py  test_my_logger.py  test_path_manipulations.py  test_webhooks.py
